{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 42,
  "lineage": "a27f24c9-cebb-2907-67b8-5ebcd97382e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939823608919:security-group/sg-09a1522fffc4e17ad",
            "description": "security_Group for test-eks-cluster",
            "egress": [],
            "id": "sg-09a1522fffc4e17ad",
            "ingress": [],
            "name": "test-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "939823608919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "test-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f55c9e30ef5aef32"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress security_group rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-2663237946",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09a1522fffc4e17ad",
            "security_group_rule_id": "sgr-01cbe1d526ded0c24",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress security_group rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-1150306095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09a1522fffc4e17ad",
            "security_group_rule_id": "sgr-0ef82cbf86a72e79a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    }
  ]
}